--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,3 +1,11 @@
+/* SPDX-License-Identifier: GPL-2.0-only */
+/*!
+ * /stylesheets/styles.css
+ *
+ * Copyright (C) 2022-2022  Akash Nag
+ *
+ */
+
 @font-face {
   font-family: 'Noto Sans';
   font-weight: 400;
